testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket_or_hexadecimal/case9.expect.out
error: expected '}' or hexadecimal digit in unicode escape, found '"'
  ==> case9.cj:14:17:
   | 
14 |     "cangjie \u{123"
   |              ~~    ^ expected '}' or hexadecimal digit
   |              |
   |              because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

error: expected '}' or hexadecimal digit in unicode escape, found 'new line character'
  ==> case9.cj:15:17:
   | 
15 |     "cangjie1 \u{12
   |               ~~   ^ expected '}' or hexadecimal digit
   |               |
   |               because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

2 errors generated, 2 errors printed.
